--- a/css/main.sass
+++ b/css/main.sass
@@ -4,14 +4,15 @@
 @import 'syntax-highlighting'
 
 @import 'bourbon/bourbon'
+@import url('https://fonts.googleapis.com/css?family=Nanum+Brush+Script');
 
 .cf
   @include clearfix
 
 $rs: 16px
 
-$font-serif: Linux Libertine
-$font-sans: Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-serif: 'Nanum Brush Script', Linux Libertine
+$font-sans: 'Nanum Brush Script', Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
 
 @mixin respond-to($breakpoint)
