--- a/css/main.sass
+++ b/css/main.sass
@@ -4,15 +4,15 @@
 @import 'syntax-highlighting'
 
 @import 'bourbon/bourbon'
-@import url('https://fonts.googleapis.com/css?family=Nanum+Brush+Script');
+@import url('https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css');
 
 .cf
   @include clearfix
 
 $rs: 16px
 
-$font-serif: 'Nanum Brush Script', Linux Libertine
-$font-sans: 'Nanum Brush Script', Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
+$font-serif: 'Nanum Barun Gothic', Linux Libertine
+$font-sans: 'Nanum Barun Gothic', Open Sans, MundoSans, "Helvetica Neue", Arial, Helvetica, sans-serif
 
 
 @mixin respond-to($breakpoint)
