change font size

--- a/css/main.sass
+++ b/css/main.sass
@@ -384,7 +384,7 @@ body
     p
       font-weight: 400
       font-style: normal
-      font-size: 22px
+      font-size: 1.20em
       line-height: 30px
       margin: 0
       padding-bottom: 30px
@@ -438,7 +438,7 @@ body
       padding: 0
       font-weight: 400
       font-style: normal
-      font-size: 23px
+      font-size: 19px
       line-height: 30px
       margin-left: 30px
       margin-bottom: 12px
